--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <body>
     <div class="todo">
       <h1>Darth's To-Do</h1>
-      <form action="" method="POST" id="test" data-js="todoForm">
+      <form action="" method="POST" data-js="todoForm">
         <div>
           <input class="todo__input" type="text" data-js="todoInput" placeholder="Enter task..." />
         </div>
       </form>
       <ul class="todo__items" data-js="todoItems">
-        <li>
+        <li data-js="noItemsMsg">
           There are currently no tasks.
           <br />
           Please enter an item in the field above.
