--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </form>
     </div>
     <script src="app.js" async></script>
-    <!-- google-analytics -->
+    <!-- google-analytics
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -31,5 +31,6 @@
       ga('send', 'pageview');
 
     </script>
+    -->
   </body>
 </html>
