Add ability to remove readings by entering a negative number

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </li>
           <li>
             <label>Reading</label>
-            <input class="todo__input" type="text"  name="readingsInput" placeholder="042" data-action="keypress->input#form" data-target='input.input' />
+            <input class="todo__input" type="number"  name="readingsInput" placeholder="042" data-action="keypress->input#form" data-target='input.input' />
           </li>
           <li>
             <label>Class</label>
