Change number input to be number type.

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
         <ul class='todo__inputs'>
           <li>
             <label>Number</label>
-            <input class="todo__input" type="text" name="numberInput" placeholder="042" data-action="keypress->input#form" data-target='input.number input.input' />
+            <input class="todo__input" type="number" name="number" placeholder="042" data-action="keypress->input#form" data-target='input.number input.input' required />
           </li>
           <li>
             <label>Reading</label>
-            <input class="todo__input" type="number"  name="readingsInput" placeholder="042" data-action="keypress->input#form" data-target='input.input' />
+            <input class="todo__input" type="number"  name="reading" placeholder="042" data-action="keypress->input#form" data-target='input.input' />
           </li>
           <li>
             <label>Class</label>
-            <input class="todo__input" type="text"  name="classInput" placeholder="042" data-action="keypress->input#form" data-target='input.input' />
+            <input class="todo__input" type="text"  name="class" placeholder="042" data-action="keypress->input#form" data-target='input.input' />
           </li>
         </ul>
     </form>
